Personal page added
Personal page added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           >PROJECT</a
         >
         <a href="education.html" target="myFrame" class="navMenu">EDUCATION</a>
-        <a href="#" class="navMenu">OTHERS</a>
+        <a href="others.html" target="myFrame" class="navMenu">OTHERS</a>
         <a href="personalDetails.html" target="myFrame" class="navMenu"
           >PERSONAL</a
         >
