CSS style added
CSS style added

--- a/home.html
+++ b/home.html
@@ -14,15 +14,33 @@
         li{
             list-style-type: square;
         }
-         
+         p{
+            text-transform: uppercase;
+         }
+         .point{
+            color: rgb(10, 209, 20);
+            background-color: rgb(3, 29, 51);
+         }
+         .text{
+            color: rgb(248, 0, 0);
+         }
+         .li-item{
+            list-style-type: disc;
+            background-color: rgb(211, 92, 92);
+            font-size: 18px;
+            font-weight: 600;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h4>Professional Summary</h4>
+        <h4 class="point">Career Objectives</h4>
+        <p>To work in organization where I can learn and grow my skills and help organizational growth</p>
+        <h4 class="point">Professional Summary</h4>
             <ul>
-                <li>Having 1 years of experience in developing Single page Web Applications using Angular 8, HTML5, CSS3, Bootstrap 5, JavaScript, TypeScript</li>
-                <li>Experience on working with version control system - GIT and GitHub</li>
+                <li>Having 1 years of experience in developing Single page Web Applications using <span class="text">Angular 8</span>, HTML5, CSS3, Bootstrap 5, JavaScript, TypeScript</li>
+                <li class="li-item">Experience on working with version control system - GIT and GitHub</li>
                 <li>Experience working with JIRA for user stories and bug tracking</li>
                 <li>Strong Debugging & Troubleshooting code experience using Chrome Developer Tool</li>
                 <li>Working exposure on ID's like VS Code and Notepad++</li>
