--- a/index.html
+++ b/index.html
@@ -46,12 +46,18 @@
         margin-top: 10px;
         margin-left: 30px;
       }
+      span{
+        color: rgb(226, 43, 52);
+      }
+      #navbar{
+        background-color: chartreuse;
+      }
     </style>
   </head>
   <body>
     <!-- Header Section -->
     <header>
-      <div class="container-fluid">
+      <div id="navbar" class="container-fluid">
         <i class="fa fa-lg fa-user" aria-hidden="true">&nbsp;</i
         ><span>Amol Ghodake</span>
         <i class="fa fa-lg fa-phone-square" aria-hidden="true">&nbsp;</i
