CSS Font-Family added
CSS Font-Family added

--- a/basicCSS.html
+++ b/basicCSS.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic CSS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      p {
+        font-family: "Poppins", sans-serif;
+      }
+      .second-Para {
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <p style="color: green; font-size: larger; font-weight: bolder">
@@ -15,7 +30,7 @@
       account owner and others in the meeting, webinar, chat or channel can
       share this information with apps and others.
     </p>
-    <p style="color: green">
+    <p style="color: green" class="second-Para">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti,
       incidunt!
     </p>
