--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
             font-family: 'Roboto', sans-serif;
             text-transform: uppercase;
             letter-spacing: 6px;
+            margin-top: 10px;
          }
          .text{
             color: rgb(248, 0, 0);
