--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
       #navbar{
         background-color: chartreuse;
       }
+      .header-icon{
+        margin-right: 10px;
+      }
     </style>
   </head>
   <body>
     <!-- Header Section -->
     <header>
       <div id="navbar" class="container-fluid">
-        <i class="fa fa-lg fa-user" aria-hidden="true">&nbsp;</i
-        ><span>Amol Ghodake</span>
-        <i class="fa fa-lg fa-phone-square" aria-hidden="true">&nbsp;</i
-        ><span>9322202110</span>
-        <i class="fa fa-lg fa-envelope" aria-hidden="true">&nbsp;</i
-        ><span>ghodakeaa@gmail.com</span>
+        <i class="fa fa-lg fa-user header-icon" aria-hidden="true"></i><span>Amol Ghodake</span>
+        <i class="fa fa-lg fa-phone-square header-icon" aria-hidden="true"></i><span>9322202110</span>
+        <i class="fa fa-lg fa-envelope header-icon" aria-hidden="true"></i><span>ghodakeaa@gmail.com</span>
       </div>
     </header>
 
