--- a/projectDetails.html
+++ b/projectDetails.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Details</title>
+    <style>
+      .name{
+        margin-left: 20px;
+      }
+      .team{
+        margin-left: 75px;
+      }
+      .env{
+        padding-right: 10px;
+      }
+    </style>
   </head>
   <body>
     <h2>Project Details</h2>
     <hr />
     <p>
-      <strong>Name: &nbsp;&nbsp;<u>Student Management</u></strong>
+      <strong>Name:<u class="name">Student Management</u></strong>
     </p>
     <p>
-      <strong><u>Environment:&nbsp;</u></strong>
+      <strong><u class="env">Environment:</u></strong>
       <mark
         >Angular8, TypeScript,JavaScript (ES6), HTML5, CSS, Bootstrap, GitHub,
         Agile and JIRA, IDE - VS Code</mark
@@ -20,7 +31,7 @@
     </p>
     <p>
       <strong>Team Size:</strong> 06
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>
+      <strong class="team">
         Duration:</strong
       ><i> 2021-1<sup>st</sup> -July till <u>present</u></i>
     </p>
