CSS Selectors Pseudo
CSS Selectors Pseudo

--- a/education.html
+++ b/education.html
@@ -14,6 +14,11 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <style>
+        td:hover{
+            background-color: blueviolet;
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -22,7 +27,7 @@
             <div class="row">
                 <div class="col-2" style="margin-top: 85px;"><h6>ACADEMIC QUALIFICATIONS</h6></div>
                 <div class="col-10">
-                    <table class="table table-dark table-hover border text-center">
+                    <table class="table table-light border text-center">
                         <thead>
                             <tr>
                                 <th>SR.NO.</th>
@@ -38,28 +43,28 @@
                                 <td>10<sup>th</sup></td>
                                 <td>S.B.V. & Jr. College</td>
                                 <td>2011</td>
-                                <td>74.36%</td>
+                                <td>A</td>
                             </tr>
                             <tr>
                                 <td>2</td>
                                 <td>12<sup>th</sup></td>
                                 <td>SSDM Mangalwedha</td>
                                 <td>2013</td>
-                                <td>53.53%</td>
+                                <td>A</td>
                             </tr>
                             <tr>
                                 <td>3</td>
                                 <td>BSC[ECS]</td>
                                 <td>Sangola College, Sangola</td>
                                 <td>2016</td>
-                                <td>58%</td>
+                                <td>A</td>
                             </tr>
                             <tr>
                                 <td>4</td>
                                 <td>M.Sc-CS</td>
                                 <td>CCS, Wakad</td>
                                 <td>2018</td>
-                                <td>62.89%</td>
+                                <td>A</td>
                             </tr>
                         </tbody>
                     </table>
