--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
         li{
-            list-style-type: square;
+            list-style-type: none;
         }
          p{
             text-transform: uppercase;
@@ -32,7 +32,6 @@
             color: rgb(248, 0, 0);
          }
          .li-item{
-            list-style-type: disc;
             background-color: rgb(211, 92, 92);
             font-size: 18px;
             font-weight: 600;
@@ -41,6 +40,9 @@
          .summaryUl{
             font-family: 'Poppins', sans-serif;
          }
+        li::before{
+            content: "👉";
+        }
     </style>
 </head>
 <body>
