--- a/projectDetails.html
+++ b/projectDetails.html
@@ -14,6 +14,9 @@
       .env{
         padding-right: 10px;
       }
+      ol::selection{
+        background-color: chocolate;
+      }
     </style>
   </head>
   <body>
