--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           >PROJECT</a
         >
         <a href="education.html" target="myFrame" class="navMenu">EDUCATION</a>
-        <a href="#" class="navMenu">OTHERS</a>
+        <a href="others.html" target="myFrame" class="navMenu">OTHERS</a>
         <a href="personalDetails.html" target="myFrame" class="navMenu"
           >PERSONAL</a
         >
@@ -114,6 +114,6 @@
         ></a>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
